--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "self written login sys for testing purpose; try REST API",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
