--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
   },
   "homepage": "https://github.com/bingxuanying/LoginSystem#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-util-is": "^1.0.2",
     "dateformat": "^3.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "npm": "^6.13.1"
+    "fs": "0.0.1-security",
+    "mongodb": "^3.3.5",
+    "mongoose": "^5.7.13",
+    "npm": "^6.13.1",
+    "util": "^0.12.1"
   }
 }
