--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
   },
   "homepage": "https://github.com/bingxuanying/LoginSystem#readme",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "core-util-is": "^1.0.2",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
     "fs": "0.0.1-security",
-    "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
     "npm": "^6.13.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "util": "^0.12.1"
   }
 }
