--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
     "fs": "0.0.1-security",
     "mongoose": "^5.7.13",
     "npm": "^6.13.1",
