--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "loginsystem",
   "version": "1.0.0",
-  "description": "self written login sys for testing purpose; try REST API",
-  "main": "index.js",
+  "description": "Login system with user and administrator sections; RESTful API",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,10 +12,9 @@
     "url": "git+https://github.com/bingxuanying/LoginSystem.git"
   },
   "keywords": [
-    "login",
-    "sys",
-    "REST",
-    "API"
+    "NodeJS",
+    "ReactJS",
+    "RESTful"
   ],
   "author": "YBX",
   "license": "ISC",
