Change fronend to React - initial setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Login system with user and administrator sections; RESTful API",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
