--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "description": "Login system with user and administrator sections; RESTful API",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js",
+    "client": "cd ../client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "core-util-is": "^1.0.2",
