--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.3.0",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "npm": "^6.13.1",
     "passport": "^0.4.0",
