--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-table": "^7.0.0-rc.10"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --open",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +42,7 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.0"
-  }
+    "webpack-dev-server": "^3.9.0"
+  },
+  "proxy": "http://localhost:3001"
 }
