--- a/website/package.json
+++ b/website/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "client",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "flux": "^3.1.3",
-    "react": "^16.12.0",
+    "axios": "^0.19.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
-    "axios": "^0.19.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
