--- a/website/package.json
+++ b/website/package.json
@@ -7,9 +7,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.19.1",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
