--- a/website/package.json
+++ b/website/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "aws s3 cp --recursive ./build s3://grainstorage.com"
   },
   "eslintConfig": {
     "extends": "react-app"
